- added browser disclaimer

--- a/presenter/index.html
+++ b/presenter/index.html
@@ -15,6 +15,7 @@ include($_SERVER['DOCUMENT_ROOT']."/includes/si_header.php"); ?>
 <div class="row-fluid">
 	<div class="span12">
 		<div class="lectures clearfix">
+			<p style="font-size:2em;">For optimum viewing experience, view in Chrome, Safari, or Firefox. Don&rsquo;t even bother with other browsers; well, Opera is alright. IE10 is probably okay, too.</p>
 		<?php if (is_array($lectures)) { 
 			foreach($lectures as $l) {
 				if ($l['active']){
